# labs_opt

./: .gitignore  README.md  pyproject.toml  setup.py
0/: count_diff.py  count_expression.py  main.py
0/UI/: main.ui
0/py_UI/: app_ui.py
1/: main.py
10/: main.py  method.py  model.py
2/: main.py
3/: main.py
4/: main.py
5/: main.py
6/: data.csv  data1.csv  main.py
7/: main.py
8/: main.py
9/: main.py
services/: model.py  opt.py
